kubernetes/manifests/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-liferay
  name: app-liferay
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-liferay
  template:
    metadata:
      labels:
        app: app-liferay
    spec:
      containers:
      - image: node:18
        name: app-node
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
