kubernetes/manifests/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app-liferay
  namespace: app
spec:
  ports:
  - port: 3000
  selector:
    app: app
